--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drum Kit</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
     <header>
-        <h1>Let's Rock Yourself</h1>
+        <h1>Let's Rock Yourself!</h1>
     </header>
     <main>
         <div class="keys">
