--- a/index.html
+++ b/index.html
@@ -10,58 +10,58 @@
 
 <body>
     <header>
-        <h1>Let's Rock Yourself!</h1>
+        <h1>Let's Rock Yourself !</h1>
     </header>
     <main>
         <div class="keys">
-            <div class="key" data-key="65">
+            <div class="key" data-key="a">
                 <kbd>A</kbd>
                 <span class="sound">clap</span>
             </div>
-            <div class="key" data-key="83">
+            <div class="key" data-key="s">
                 <kbd>S</kbd>
                 <span class="sound">hihat</span>
             </div>
-            <div class="key" data-key="68">
+            <div class="key" data-key="d">
                 <kbd>D</kbd>
                 <span class="sound">kick</span>
             </div>
-            <div class="key" data-key="70">
+            <div class="key" data-key="f">
                 <kbd>F</kbd>
                 <span class="sound">openhat</span>
             </div>
-            <div class="key" data-key="71">
+            <div class="key" data-key="g">
                 <kbd>G</kbd>
                 <span class="sound">boom</span>
             </div>
-            <div class="key" data-key="72">
+            <div class="key" data-key="h">
                 <kbd>H</kbd>
                 <span class="sound">ride</span>
             </div>
-            <div class="key" data-key="74">
+            <div class="key" data-key="j">
                 <kbd>J</kbd>
                 <span class="sound">snare</span>
             </div>
-            <div class="key" data-key="75">
+            <div class="key" data-key="k">
                 <kbd>K</kbd>
                 <span class="sound">tom</span>
             </div>
-            <div class="key" data-key="76">
+            <div class="key" data-key="l">
                 <kbd>L</kbd>
                 <span class="sound">tink</span>
             </div>
         </div>
-        <audio src="sounds/clap.wav" data-key="65"></audio>
-        <audio src="sounds/hihat.wav" data-key="83"></audio>
-        <audio src="sounds/kick.wav" data-key="68"></audio>
-        <audio src="sounds/openhat.wav" data-key="70"></audio>
-        <audio src="sounds/boom.wav" data-key="71"></audio>
-        <audio src="sounds/ride.wav" data-key="72"></audio>
-        <audio src="sounds/snare.wav" data-key="74"></audio>
-        <audio src="sounds/tom.wav" data-key="75"></audio>
-        <audio src="sounds/tink.wav" data-key="76"></audio>
+        <audio src="sounds/clap.wav" data-key="a"></audio>
+        <audio src="sounds/hihat.wav" data-key="s"></audio>
+        <audio src="sounds/kick.wav" data-key="d"></audio>
+        <audio src="sounds/openhat.wav" data-key="f"></audio>
+        <audio src="sounds/boom.wav" data-key="g"></audio>
+        <audio src="sounds/ride.wav" data-key="h"></audio>
+        <audio src="sounds/snare.wav" data-key="j"></audio>
+        <audio src="sounds/tom.wav" data-key="k"></audio>
+        <audio src="sounds/tink.wav" data-key="l"></audio>
     </main>
-    <script></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
