--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drum Kit</title>
+    <link rel="shortcut icon"  href="images/drum-set.png" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -61,7 +62,7 @@
         <audio src="sounds/tom.wav" data-key="k"></audio>
         <audio src="sounds/tink.wav" data-key="l"></audio>
     </main>
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
